--- a/lib/streamaze_web/templates/layout/root.html.heex
+++ b/lib/streamaze_web/templates/layout/root.html.heex
@@ -536,7 +536,7 @@
       </div>
     </aside>
 
-    <main class="p-4 md:ml-64 h-auto pt-32">
+    <main class="p-4 md:ml-64 h-auto pt-32 pb-16">
       <%= @inner_content %>
     </main>
   </div>
