--- a/lib/streamaze_web/templates/user_settings/edit.html.heex
+++ b/lib/streamaze_web/templates/user_settings/edit.html.heex
@@ -1,75 +1,94 @@
-<h1>My Account</h1>
+<div class="flex flex-col gap-6">
+  <div>
+    <h1 class="text-4xl font-bold mb-2">My Account</h1>
 
-<p>Here you can view and edit and view your profile.</p>
-
-<br />
-
-<h3>Key codes</h3>
-
-<p>Do not share your key codes with anyone. They can be used to impersonate you.</p>
-
-<br />
-
-<.form let={f} for={@form}>
-    <%= label f, "My invite code", class: "text-white" %>
-    <%= text_input f, "my_invite_code", disabled: true %>
-
-    <%= label f, "API key", class: "text-white" %>
-    <%= text_input f, "api_key", disabled: true %>
-</.form>
-
-<br />
-
-<h3>Change email</h3>
-
-<.form let={f} for={@email_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_email">
-  <%= if @email_changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
-    </div>
-  <% end %>
-
-  <%= hidden_input f, :action, name: "action", value: "update_email" %>
-
-  <%= label f, :email, class: "text-white" %>
-  <%= email_input f, :email, required: true %>
-  <%= error_tag f, :email %>
-
-  <%= label f, :current_password, for: "current_password_for_email", class: "text-white" %>
-  <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_email" %>
-  <%= error_tag f, :current_password %>
+    <p class="mb-4 font-medium text-gray-400">Here you can view and edit and view your profile.</p>
+  </div>
 
   <div>
-    <%= submit "Change email" %>
+    <h2 class="text-2xl font-bold mb-2">Streamaze Key</h2>
+
+    <.form let={f} for={@form}>
+        <%= label f, :api_key, class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" do %>
+          Key
+        <% end %>
+        <%= text_input f, "api_key", disabled: true, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
+
+        <div class="mt-4 flex items-center p-4 mb-4 text-sm text-yellow-800 border border-yellow-300 rounded-lg bg-yellow-50 dark:bg-gray-800 dark:text-yellow-300 dark:border-yellow-800" role="alert">
+          <svg class="flex-shrink-0 inline w-4 h-4 mr-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+            <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+          </svg>
+          <span class="sr-only">Info</span>
+          <div>
+            <span class="font-medium">Important!</span> Do not share your Streamaze Key with anyone. It can be used to hijack your stream.
+          </div>
+        </div>
+    </.form>
   </div>
-</.form>
-
-<br />
-
-<h3>Change password</h3>
-
-<.form let={f} for={@password_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_password">
-  <%= if @password_changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
-    </div>
-  <% end %>
-
-  <%= hidden_input f, :action, name: "action", value: "update_password" %>
-
-  <%= label f, :password, "New password", class: "text-white" %>
-  <%= password_input f, :password, required: true %>
-  <%= error_tag f, :password %>
-
-  <%= label f, :password_confirmation, "Confirm new password", class: "text-white" %>
-  <%= password_input f, :password_confirmation, required: true %>
-  <%= error_tag f, :password_confirmation %>
-
-  <%= label f, :current_password, for: "current_password_for_password", class: "text-white" %>
-  <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_password" %>
-  <%= error_tag f, :current_password %>
 
   <div>
-    <%= submit "Change password" %>
+    <h2 class="text-2xl font-bold mb-2">Change Email</h2>
+
+    <.form let={f} for={@email_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_email">
+      <%= if @email_changeset.action do %>
+        <div class="alert alert-danger">
+          <p>Oops, something went wrong! Please check the errors below.</p>
+        </div>
+      <% end %>
+
+      <%= hidden_input f, :action, name: "action", value: "update_email" %>
+
+      <div class="mb-6">
+        <%= label f, :email, class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
+        <%= email_input f, :email, required: true, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
+        <%= error_tag f, :email %>
+      </div>
+
+      <div class="mb-6">
+        <%= label f, :current_password, for: "current_password_for_email", class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
+        <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_email", class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
+        <%= error_tag f, :current_password %>
+      </div>
+
+      <div>
+        <%= submit "Change email", class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800" %>
+      </div>
+    </.form>
   </div>
-</.form>
+
+  <div>
+    <h2 class="text-2xl font-bold mb-2">Change Password</h2>
+
+    <.form let={f} for={@password_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_password">
+      <%= if @password_changeset.action do %>
+        <div class="alert alert-danger">
+          <p>Oops, something went wrong! Please check the errors below.</p>
+        </div>
+      <% end %>
+
+      <%= hidden_input f, :action, name: "action", value: "update_password" %>
+
+      <div class="mb-6">
+        <%= label f, :password, "New password", class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
+        <%= password_input f, :password, required: true, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
+        <%= error_tag f, :password %>
+      </div>
+
+      <div class="mb-6">
+        <%= label f, :password_confirmation, "Confirm new password", class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
+        <%= password_input f, :password_confirmation, required: true, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
+        <%= error_tag f, :password_confirmation %>
+      </div>
+
+      <div class="mb-6">
+        <%= label f, :current_password, for: "current_password_for_password", class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
+        <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_password", class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
+        <%= error_tag f, :current_password %>
+      </div>
+
+      <div>
+        <%= submit "Change password", class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800" %>
+      </div>
+    </.form>
+  </div>
+</div>
