Add widgets page

--- a/lib/streamaze_web/live/managers_live/index.html.heex
+++ b/lib/streamaze_web/live/managers_live/index.html.heex
@@ -17,8 +17,8 @@
     <ul class="max-w-md space-y-1 text-gray-500 list-disc list-inside dark:text-gray-400">
         <li>View donations and expenses</li>
         <li>View your subathon settings</li>
-        <li><s>Modify expenses</s> (Coming soon)</li>
-        <li><s>Modify subathon settings</s> (Coming soon)</li>
+        <li><s>Modify expenses</s> <b>(Coming soon)</b></li>
+        <li><s>Modify subathon settings</s> <b>(Coming soon)</b></li>
     </ul>
 
     <h2 class="mt-4 mb-2 text-lg font-semibold text-gray-900 dark:text-white">Managers cannot:</h2>
