--- a/lib/streamaze_web/live/streamer_live/index.html.heex
+++ b/lib/streamaze_web/live/streamer_live/index.html.heex
@@ -1,7 +1,7 @@
 <div class="flex flex-col gap-4">
   <h1 class="text-4xl font-bold">All Streamers</h1>
 
-  <div class="w-full max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
+  <div class="w-full p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
       <div class="flex items-center justify-between mb-4">
           <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Latest</h5>
           <%!-- <a href="#" class="text-sm font-medium text-blue-600 hover:underline dark:text-blue-500">
