--- a/lib/streamaze_web/live/dashboard_live/index.html.heex
+++ b/lib/streamaze_web/live/dashboard_live/index.html.heex
@@ -30,7 +30,7 @@
                                         <%= if donation.metadata["pfp"] do %>
                                             <img class="w-8 h-8 rounded-full" src={donation.metadata["pfp"]} alt="Rounded avatar">
                                         <% else %>
-                                            <span class="font-medium text-gray-600 dark:text-gray-300"><%= String.at(@selected_streamer.name, 0) %></span>
+                                            <span class="font-medium text-gray-600 dark:text-gray-300"><%= String.at(donation.sender, 0) %></span>
                                         <% end %>
                                     </div>
                                     <div class="flex-1 min-w-0">
@@ -41,9 +41,11 @@
                                             <%= donation_type_to_string(donation.type) %>
                                         </p>
                                     </div>
-                                    <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
-                                        <%= Money.to_string(donation.value) %>
-                                    </div>
+                                    <%= if not Money.zero?(donation.value) do %>
+                                        <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
+                                            <%= Money.to_string(donation.value) %>
+                                        </div>
+                                    <% end %>
                                 </div>
                                 <%= if donation.message do %>
                                     <div class="mt-3 text-gray-500 dark:text-gray-400"><%= donation.message %></div>
