--- a/lib/streamaze_web/live/dashboard_live/index.html.heex
+++ b/lib/streamaze_web/live/dashboard_live/index.html.heex
@@ -48,8 +48,11 @@
                                     <% end %>
                                 </div>
                                 <%= if donation.message do %>
-                                    <div class="mt-3 text-gray-500 dark:text-gray-400"><%= donation.message %></div>
+                                    <div class="mt-3 text-gray-700 dark:text-gray-200"><%= donation.message %></div>
                                 <% end %>
+                                <p class="mt-2 text-sm text-gray-500 dark:text-gray-400">
+                                    <time phx-hook="LocalTime" id="my-local-time"><%= donation.inserted_at %></time>
+                                </p>
                             </li>
                         <% end %>
                     </ul>
