--- a/lib/streamaze_web/live/profile_live/index.html.heex
+++ b/lib/streamaze_web/live/profile_live/index.html.heex
@@ -145,7 +145,7 @@
                                     Streamlabs voice: <%= Map.get(@dashboard_config.donations_config, "streamlabs_voice") || "Not set" %>
                                 </p>
                                 <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                                    ElevenLabs voice: <%= Map.get(@dashboard_config.donations_config, "elevenlabs_voice") || "Not set" %>
+                                    ElevenLabs voice ID: <%= Map.get(@dashboard_config.donations_config, "elevenlabs_voice") || "Not set" %>
                                 </p>
 
                                 <p class="text-sm text-gray-500 truncate dark:text-gray-400">
