--- a/lib/streamaze_web/templates/layout/root.html.heex
+++ b/lib/streamaze_web/templates/layout/root.html.heex
@@ -49,14 +49,14 @@
             </svg>
             <span class="sr-only">Toggle sidebar</span>
           </button>
-          <a href="https://flowbite.com" class="flex items-center justify-between mr-4">
+          <%= link to: StreamazeWeb.Endpoint.url, class: "flex items-center justify-between mr-4" do %>
             <img
               src={StreamazeWeb.Router.Helpers.static_path(@conn, "/images/logo.svg")}
               class="mr-3 h-8"
               alt="Streamaze Logo"
             />
             <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Streamaze</span>
-          </a>
+          <% end %>
         </div>
         <div class="flex items-center lg:order-2">
           <!-- Apps -->
