Minor improvements to dash UI

--- a/lib/streamaze_web/live/codes_live/index.html.heex
+++ b/lib/streamaze_web/live/codes_live/index.html.heex
@@ -1,5 +1,10 @@
 <div class="flex flex-col gap-4">
-    <h1 class="text-4xl font-bold">My Codes</h1>
+    <h1 class="text-4xl font-bold">My Code</h1>
+
+    <p class="mb-6 font-medium text-gray-400">
+        This page contains your manager invite code.
+        You can share this with others to manage their account.
+    </p>
     
     <div class="mb-6">
         <.form let={f} for={@form}>
