--- a/lib/streamaze_web/live/profile_live/index.html.heex
+++ b/lib/streamaze_web/live/profile_live/index.html.heex
@@ -1,9 +1,9 @@
 <div class="flex flex-col gap-4">
     <h1 class="text-4xl font-bold">My Profile</h1>
 
-    <p class="mb-2 font-medium text-gray-400">Overview of your Streamaze profile.</p>
+    <p class="mb-6 font-medium text-gray-400">Overview of your Streamaze profile.</p>
 
-    <h2 class="mt-4 text-2xl font-semibold text-gray-900 dark:text-white">
+    <h2 class="text-2xl font-semibold text-gray-900 dark:text-white">
         Streamer Page
     </h2>
     <p class="mb-4 font-medium text-gray-400">
