--- a/lib/streamaze_web/templates/user_settings/edit.html.heex
+++ b/lib/streamaze_web/templates/user_settings/edit.html.heex
@@ -20,7 +20,7 @@
           </svg>
           <span class="sr-only">Info</span>
           <div>
-            <span class="font-medium">Important!</span> Do not share your Streamaze Key with anyone. It can be used to hijack your stream.
+            <span class="font-medium">Important!</span> Do not share your Streamaze Key with anyone. It can be used to hijack your stream and steal 3rd party API keys.
           </div>
         </div>
     </.form>
