--- a/lib/streamaze_web/live/widgets_live/index.html.heex
+++ b/lib/streamaze_web/live/widgets_live/index.html.heex
@@ -1,7 +1,7 @@
 <div class="flex flex-col gap-4">
     <h1 class="text-4xl font-bold">Widgets</h1>
 
-    <p class="text-gray-500 dark:text-gray-400">
+    <p class="mb-6 font-medium text-gray-400">
         Learn how to use our OBS widgets to overlay stream info <%= link to: "https://docs.streamaze.live/widgets", class: "font-medium text-blue-600 dark:text-blue-500 hover:underline" do %>here<% end %>.
     </p>
 
